--- a/css/style.css
+++ b/css/style.css
@@ -7,70 +7,6 @@ body {
   margin-inline: auto;
 }
 
-/*=== 画像の表示エリア ================================= */
-.slide {
-  position: relative;
-  overflow: hidden;
-  width: calc(100vw - 80px);
-  height: 100vh;
-  background: #fff;
-  z-index: -1;
-}
-
-/*=== 画像の設定 ======================================= */
-.slide img {
-  display: block;
-  position: absolute;
-  width: inherit;
-  height: inherit;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
-  opacity: 0;
-  animation: slideAnime 15s ease infinite;
-  z-index: -1;
-}
-
-/*=== スライドのアニメーションを段差で開始する ========= */
-.slide img:nth-of-type(1) {
-  animation-delay: 0s;
-}
-
-.slide img:nth-of-type(2) {
-  animation-delay: 3s;
-}
-
-.slide img:nth-of-type(3) {
-  animation-delay: 6s;
-}
-
-.slide img:nth-of-type(4) {
-  animation-delay: 9s;
-}
-
-.slide img:nth-of-type(5) {
-  animation-delay: 12s;
-}
-
-/*=== スライドのアニメーション ========================= */
-@keyframes slideAnime {
-  0% {
-    opacity: 0;
-  }
-  3% {
-    opacity: 1;
-  }
-  17% {
-    opacity: 1;
-  }
-  20% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
 .wrapper {
   padding-inline: 15%;
 }
@@ -268,11 +204,92 @@ main
 -------------------------------------------*/
 main {
   width: 100%;
+  position: relative;
+  /*=== 画像の表示エリア ================================= */
+  /*=== 画像の設定 ======================================= */
+  /*=== スライドのアニメーションを段差で開始する ========= */
+  /*=== スライドのアニメーション ========================= */
   /*--------------  home  ---------------*/
   /*--------------  biography  -------------*/
   /*--------------  portfolio  -------------*/
   /*--------------  contact  ---------------*/
   /*--------------  information  -----------*/
+}
+main .slide {
+  position: relative;
+  overflow: hidden;
+  width: calc(100vw - 80px);
+  height: 100vh;
+  background: #fff;
+  z-index: -1;
+}
+main .slide img {
+  display: block;
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  opacity: 0;
+  -webkit-animation: slideAnime 15s ease infinite;
+          animation: slideAnime 15s ease infinite;
+  z-index: -1;
+}
+main .slide img:nth-of-type(1) {
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+main .slide img:nth-of-type(2) {
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+main .slide img:nth-of-type(3) {
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+}
+main .slide img:nth-of-type(4) {
+  -webkit-animation-delay: 9s;
+          animation-delay: 9s;
+}
+main .slide img:nth-of-type(5) {
+  -webkit-animation-delay: 12s;
+          animation-delay: 12s;
+}
+@-webkit-keyframes slideAnime {
+  0% {
+    opacity: 0;
+  }
+  3% {
+    opacity: 1;
+  }
+  17% {
+    opacity: 1;
+  }
+  20% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes slideAnime {
+  0% {
+    opacity: 0;
+  }
+  3% {
+    opacity: 1;
+  }
+  17% {
+    opacity: 1;
+  }
+  20% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 main .home {
   height: 100vh;
@@ -287,6 +304,8 @@ main .home {
 main .container {
   width: 1024px;
   margin: 0 auto;
+  position: absolute;
+  top: 0;
 }
 main .top-text {
   position: fixed;
@@ -434,6 +453,7 @@ main .portfolio .scroll-nav {
     transition: all 0.5s;
   }
   main .portfolio .scroll-nav ul li {
+    width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
   }
@@ -490,19 +510,8 @@ main .contact-form dt {
   width: 30%;
   padding-block: 10px;
 }
-@media screen and (max-width: 900px) {
-  main .contact-form dt {
-    width: 100%;
-  }
-}
 main .contact-form dd {
   width: 70%;
-}
-@media screen and (max-width: 900px) {
-  main .contact-form dd {
-    width: 100%;
-    margin-bottom: 20px;
-  }
 }
 main .contact-form dd input,
 main .contact-form dd textarea {
@@ -532,7 +541,7 @@ main .information .flex .calendar {
   position: fixed;
   top: 100px;
   left: 50px;
-  z-index: 200;
+  z-index: 10;
 }
 main .information .flex .calendar li {
   font-size: 12px;
@@ -617,3 +626,4 @@ footer .copy-right-fixed {
     margin-top: 40px;
   }
 }
+/*# sourceMappingURL=style.css.map */
