--- a/css/style.scss
+++ b/css/style.scss
@@ -11,66 +11,6 @@ body {
   margin-inline: auto;
 }
 
-/*=== 画像の表示エリア ================================= */
-.slide {
-  position: relative;
-  overflow: hidden;
-  width: calc(100vw - 80px);
-  height: 100vh;
-  // margin: auto; /* サンプルは中央寄せの背景：白 */
-  background: #fff;
-  z-index: -1;
-}
-
-/*=== 画像の設定 ======================================= */
-.slide img {
-  display: block;
-  position: absolute;
-  width: inherit;
-  height: inherit;
-  object-fit: cover;
-  object-position: center;
-  opacity: 0;
-  animation: slideAnime 15s ease infinite;
-  z-index: -1;
-}
-
-/*=== スライドのアニメーションを段差で開始する ========= */
-.slide img:nth-of-type(1) {
-  animation-delay: 0s;
-}
-.slide img:nth-of-type(2) {
-  animation-delay: 3s;
-}
-.slide img:nth-of-type(3) {
-  animation-delay: 6s;
-}
-.slide img:nth-of-type(4) {
-  animation-delay: 9s;
-}
-.slide img:nth-of-type(5) {
-  animation-delay: 12s;
-}
-
-/*=== スライドのアニメーション ========================= */
-@keyframes slideAnime {
-  0% {
-    opacity: 0;
-  }
-  3% {
-    opacity: 1;
-  }
-  17% {
-    opacity: 1;
-  }
-  20% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
 .wrapper {
   padding-inline: 15%;
 }
@@ -304,6 +244,66 @@ main
 
 main {
   width: 100%;
+  position: relative;
+
+  /*=== 画像の表示エリア ================================= */
+  .slide {
+    position: relative;
+    overflow: hidden;
+    width: calc(100vw - 80px);
+    height: 100vh;
+    background: #fff;
+    z-index: -1;
+  }
+
+  /*=== 画像の設定 ======================================= */
+  .slide img {
+    display: block;
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    object-fit: cover;
+    object-position: center;
+    opacity: 0;
+    animation: slideAnime 15s ease infinite;
+    z-index: -1;
+  }
+
+  /*=== スライドのアニメーションを段差で開始する ========= */
+  .slide img:nth-of-type(1) {
+    animation-delay: 0s;
+  }
+  .slide img:nth-of-type(2) {
+    animation-delay: 3s;
+  }
+  .slide img:nth-of-type(3) {
+    animation-delay: 6s;
+  }
+  .slide img:nth-of-type(4) {
+    animation-delay: 9s;
+  }
+  .slide img:nth-of-type(5) {
+    animation-delay: 12s;
+  }
+
+  /*=== スライドのアニメーション ========================= */
+  @keyframes slideAnime {
+    0% {
+      opacity: 0;
+    }
+    3% {
+      opacity: 1;
+    }
+    17% {
+      opacity: 1;
+    }
+    20% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
 
   /*--------------  home  ---------------*/
 
@@ -322,6 +322,8 @@ main {
     width: 1024px;
     // text-align: center;
     margin: 0 auto;
+    position: absolute;
+    top: 0;
   }
 
   .top-text {
@@ -609,19 +611,10 @@ main {
       dt {
         width: 30%;
         padding-block: 10px;
-
-        @include m.tab {
-          width: 100%;
-        }
       }
 
       dd {
         width: 70%;
-
-        @include m.tab {
-          width: 100%;
-          margin-bottom: 20px;
-        }
 
         input,
         textarea {
@@ -659,7 +652,7 @@ main {
         position: fixed;
         top: 100px;
         left: 50px;
-        z-index: 200;
+        z-index: 10;
 
         li {
           font-size: 12px;
