--- a/css/style.scss
+++ b/css/style.scss
@@ -113,6 +113,10 @@ header {
       left: 50%;
       transform: translate(-50%, -50%);
 
+      @include m.tab {
+        flex-direction: column;
+      }
+
       a {
         color: black;
         font-size: 10px;
